orbs/mug/3/work/compile.log
mug.c: In function ‘main’:
mug.c:10:1: error: expected declaration or statement at end of input
 {
 ^
